[gd_scene load_steps=3 format=2]

[ext_resource path="res://fundo.jpg" type="Texture" id=1]
[ext_resource path="res://Fundo.gd" type="Script" id=2]

[node name="Inicio" type="Node2D"]

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 213.625, 400.961 )
scale = Vector2( 0.375777, 0.330428 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="jogar" type="Button" parent="Fundo"]
margin_left = -195.024
margin_top = -213.402
margin_right = 266.976
margin_bottom = -84.4017
rect_pivot_offset = Vector2( -1589.09, -515.385 )
text = "Jogar"

[node name="config" type="Button" parent="Fundo"]
margin_left = -195.0
margin_top = -20.0
margin_right = 267.0
margin_bottom = 109.0
text = "Configurações"

[node name="creditos" type="Button" parent="Fundo"]
margin_left = -195.0
margin_top = 173.0
margin_right = 267.0
margin_bottom = 302.0
text = "Créditos"

[connection signal="pressed" from="Fundo/jogar" to="Fundo" method="_on_jogar_pressed"]
[connection signal="pressed" from="Fundo/config" to="Fundo" method="_on_config_pressed"]
[connection signal="pressed" from="Fundo/creditos" to="Fundo" method="_on_creditos_pressed"]
